--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-02-15 Thu 21:49 -->
+<!-- 2024-06-11 Tue 13:28 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -24,20 +24,28 @@
 <main id="content" class="content">
 <header>
 <h1 class="title">Reilly Raab</h1>
-</header><div id="outline-container-Pages" class="outline-2">
-<h2 id="Pages">Pages</h2>
-<div class="outline-text-2" id="text-org17c217c">
-<p>
-<a href="./about.html">About Me</a> <br>
-<a href="./reading-list.html">Digital Bookshelf</a> <br>
-<a href="./demo.html">HTML Demo &amp; Reference</a> <br>
+</header><p>
+<a href="./about.html">Digital Résumé</a> <br>
 <a href="./site-info.html">Technical Site Info</a>
+</p>
+
+<div id="outline-container-Personal" class="outline-2">
+<h2 id="Personal">Personal</h2>
+<div class="outline-text-2" id="text-orgeffef83">
+<p>
+<a href="./reading-list.html">Digital Bookshelf</a> <br>
+<a href="./guitar.html">Building a Guitar</a>
 </p>
 </div>
 </div>
-<div id="outline-container-Notes" class="outline-2">
-<h2 id="Notes">Notes</h2>
-<div class="outline-text-2" id="text-org264a9dd">
+
+<div id="outline-container-Technical-Notes" class="outline-2">
+<h2 id="Technical-Notes">Technical Notes</h2>
+<div class="outline-text-2" id="text-org22742b9">
+</div>
+<div id="outline-container-Math" class="outline-3">
+<h3 id="Math">Math</h3>
+<div class="outline-text-3" id="text-org1fb46b1">
 <p>
 <a href="./julia.html">Julia Sets</a> <br>
 <a href="./euler-lagrange.html">Calculus of Variations</a> <br>
@@ -46,17 +54,42 @@
 </p>
 </div>
 </div>
-<div id="outline-container-Projects" class="outline-2">
-<h2 id="Projects">Projects</h2>
-<div class="outline-text-2" id="text-org3dc8368">
+
+<div id="outline-container-Computing" class="outline-3">
+<h3 id="Computing">Computing</h3>
+<div class="outline-text-3" id="text-org0fe99e8">
+<p>
+<a href="./keyboard.html">My Keyboard Layout</a> <br>
+<a href="./demo.html">HTML Demo &amp; Reference</a>
+</p>
+</div>
+</div>
+</div>
+
+<div id="outline-container-Web-Projects" class="outline-2">
+<h2 id="Web-Projects">Web Projects</h2>
+<div class="outline-text-2" id="text-org02ce84b">
+</div>
+<div id="outline-container-Chess" class="outline-3">
+<h3 id="Chess">Chess</h3>
+<div class="outline-text-3" id="text-orgadba9ad">
 <p>
 <a href="./chess.html">Chess</a> <br>
 <a href="./dark-chess.html">Dark Chess</a> <br>
-<a href="./fischer-random.html">Fischer Random Chess</a> <br>
+<a href="./fischer-random.html">Fischer Random Chess</a>
+</p>
+</div>
+</div>
+
+<div id="outline-container-Tools" class="outline-3">
+<h3 id="Tools">Tools</h3>
+<div class="outline-text-3" id="text-org99eee34">
+<p>
 <a href="./tex.html">Live Tex to SVG, PNG</a> <br>
 <a href="./greyline.html">Greyline Map &amp; Interactive Astronomical Clock</a> <br>
 <a href="./satellites.html">Hourly Satellite Data</a>
 </p>
+</div>
 </div>
 </div>
 </main>
