--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-04-17 Wed 09:49 -->
+<!-- 2024-06-11 Tue 15:17 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -67,14 +67,10 @@ Public domain books may be available via <a href="https://www.gutenberg.org/">Pr
 </center>
 </p>
 
+
 <p>
 <table>
 </p>
-<tr>
-  <td colspan="3">
-    <h4>Lecture Series</h4>
-  </td>
-</tr>
 
 
 
@@ -158,6 +154,11 @@ Public domain books may be available via <a href="https://www.gutenberg.org/">Pr
     <td> <a href="https://www.archive.ece.cmu.edu/~ganger/712.fall02/papers/p761-thompson.pdf">Reflections on Trusting Trust</a></td>
     <td> <a href="https://en.wikipedia.org/wiki/Ken_Thompson">Ken Thompson
     <td> 1984 </td>
+  </tr>
+  <tr>
+    <td> ◦ <a href="https://blog.dave.tf/post/finding-bottom-turtle/">Finding the Bottom Turtle</a></td>
+    <td> <a href="https://www.dave.tf/">David Anderson</a>
+    <td> 2021 </td>
   </tr>
   <tr>
     <td colspan="3">
@@ -519,6 +520,16 @@ Public domain books may be available via <a href="https://www.gutenberg.org/">Pr
     <td colspan="3">
       <h4>Books</h4>
     </td>
+  </tr>
+  <tr>
+    <td> <a href="https://en.wikipedia.org/wiki/Seveneves">Seveneves</a></td>
+    <td> <a href="https://en.wikipedia.org/wiki/Neal_Stephenson">Neal Stephenson</a> </td>
+    <td> 2015 </td>
+  </tr>
+  <tr>
+    <td> <a href="https://en.wikipedia.org/wiki/Anathem">Anathem</a></td>
+    <td> <a href="https://en.wikipedia.org/wiki/Neal_Stephenson">Neal Stephenson</a> </td>
+    <td> 2008 </td>
   </tr>
   <tr>
     <td> <a href="https://en.wikipedia.org/wiki/A_Deepness_in_the_Sky">A Deepness in the Sky</a></td>
