--- a/site-info.html
+++ b/site-info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-11 Thu 09:38 -->
+<!-- 2024-06-11 Tue 14:11 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Site Info</title>
@@ -64,24 +64,28 @@ to github.io&rsquo;s IP addresses.
 My user home directory with SOE has an
 <a href="https://en.wikipedia.org/wiki/.htaccess">.htaccess</a> file that reads
 </p>
-<div class="org-src-container">
-<pre class="src src-nil">  RedirectMatch 301 ^/$ https://reillyraab.com/about.html
-</pre>
-</div></li>
+<pre class="example">
+  RedirectMatch 301 ^/$ https://reillyraab.com/about.html
+</pre></li>
 </ul>
+
 <div id="outline-container-Privacy" class="outline-2">
 <h2 id="Privacy">Privacy</h2>
-<div class="outline-text-2" id="text-org8806d36">
+<div class="outline-text-2" id="text-orgef7e186">
 <p>
 I store no information about you whatsoever.
 </p>
 
 <p>
-Network resources (<a href="https://en.wikipedia.org/wiki/JavaScript">javascript</a>,
-<a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">css</a>, fonts, etc.),
-including library code, have been copied and are hosted by this site itself in
-order to avoid content delivery networks (which can track you).
+Network resources (<a href="https://en.wikipedia.org/wiki/JavaScript">javascript</a>, <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">css</a>, fonts, etc.), including library code, have
+been copied (consistent with open-source licenses) and are hosted by this site
+itself in order to avoid content delivery networks (which can track you).
 </p>
+
+<ul class="org-ul">
+<li><a href="./js/lib/readme.txt">Open-source Javascript served by this site</a>.</li>
+<li><a href="./css/lib/readme.txt">Open-source CSS served by this site</a>.</li>
+</ul>
 
 <p>
 That being said, I&rsquo;m using
@@ -90,9 +94,10 @@ network requests can be tracked anyway (by Cloudflare):
 </p>
 </div>
 </div>
+
 <div id="outline-container-Third-Party-Privacy-Policy" class="outline-2">
 <h2 id="Third-Party-Privacy-Policy">Third-Party Privacy Policy</h2>
-<div class="outline-text-2" id="text-org660e19f">
+<div class="outline-text-2" id="text-org9386f30">
 <p>
 By using this site, you are an end user of Cloudflare&rsquo;s services.
 </p>
@@ -145,7 +150,7 @@ aggregated data may be shared with third parties.
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2023 Reilly Raab
+Copyright © 2024 Reilly Raab
 </footer>
 </body>
 </html>
