--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-05-06 Mon 08:42 -->
+<!-- 2024-11-18 Mon 17:01 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -52,8 +52,8 @@ table {
   <div>
 
 
-<figure id="org63fedde">
-<img src="./img/yosemite_village.jpg" alt="yosemite_village.jpg">
+<figure id="orgebfa973">
+<img src="./img/raab_headshot.jpg" alt="raab_headshot.jpg">
 
 </figure>
 
@@ -64,6 +64,7 @@ table {
 <ul class="org-ul">
 <li><a href="https://github.com/raabrp">Github</a></li>
 <li><a href="https://scholar.google.com/citations?user=kmyHu24AAAAJ">Google Scholar</a></li>
+<li><a href="https://www.linkedin.com/in/reilly-raab/">LinkedIn</a></li>
 </ul>
 
 <p>
@@ -120,16 +121,22 @@ My resume is also available as a <a href="./files/reilly-raab-resume.pdf">PDF</a
 <h2 id="Summary">Summary</h2>
 <div class="outline-text-2" id="text-org2e13903">
 <p>
-I recently completed a PhD in Computer Science and Engineering at UC Santa Cruz,
+I am currently a postdoctoral research associate at Pacific Northwest National
+Laboratory, where I conduct research in optimization, multiagent systems, and
+so-called &ldquo;agentic&rdquo; Language Model (LM) programs.
+</p>
+
+<p>
+I completed my PhD in Computer Science and Engineering at UC Santa Cruz,
 where my doctoral research in machine learning focused on aligning local
 incentives with global objectives and constraints in multiagent systems.
 </p>
 
 <p>
-My previous background is in physics, with experience in scientific computing,
-signal processing for quantum systems, and electronics. I spent a few years
-between undergrad and grad school backpacking abroad and remotely developing
-software related to automated circuit design.
+My background is in physics, with experience in scientific computing, signal
+processing for quantum systems, and electronics. I spent a few years between
+undergrad and grad school living abroad and remotely developing software related
+to automated circuit design.
 </p>
 </div>
 </div>
