--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-06-11 Tue 13:28 -->
+<!-- 2024-11-18 Mon 16:58 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -33,7 +33,7 @@
 <h2 id="Personal">Personal</h2>
 <div class="outline-text-2" id="text-orgeffef83">
 <p>
-<a href="./reading-list.html">Digital Bookshelf</a> <br>
+<a href="./reading-list.html">Virtual Bookshelf</a> <br>
 <a href="./guitar.html">Building a Guitar</a>
 </p>
 </div>
