--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-06-11 Tue 15:17 -->
+<!-- 2024-11-18 Mon 17:22 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -40,6 +40,7 @@
 <li><a href="#History">History</a></li>
 <li><a href="#Economics-and-Finance">Economics and Finance</a></li>
 <li><a href="#-American-Class-amp-Culture">(American) Class &amp; Culture</a></li>
+<li><a href="#-American-Politics">(American) Politics</a></li>
 <li><a href="#-Geo-Politics">(Geo)Politics</a></li>
 </ul>
 </li>
@@ -60,8 +61,8 @@ tbody > tr:first-of-type h4 {
 
 <p>
 <center>
-<em>Your local library may be an alternative to <a href="https://libgen.rs/">Library Genesis</a>
-or <a href="https://sci-hub.st/">Sci-hub</a></em>.
+<em>Your local library may be an alternative to <a href="https://en.wikipedia.org/wiki/Anna's_Archive">Anna&rsquo;s Archive</a>
+or <a href="https://en.wikipedia.org/wiki/Sci-Hub">Sci-hub</a></em>.
 <br/>
 Public domain books may be available via <a href="https://www.gutenberg.org/">Project Gutenberg</a>.
 </center>
@@ -424,6 +425,24 @@ Public domain books may be available via <a href="https://www.gutenberg.org/">Pr
     <td> <a href="https://www.youtube.com/watch?v=DXP705ezCM4">The Red Pill</a></td>
     <td> <a href="https://en.wikipedia.org/wiki/Cassie_Jaye">Cassie Jaye</a></td>
     <td> 2016 </td>
+  </tr>
+</table>
+</div>
+</div>
+
+<div id="outline-container--American-Politics" class="outline-3">
+<h3 id="-American-Politics">(American) Politics</h3>
+<div class="outline-text-3" id="text-org98a8055">
+<table>
+  <tr>
+    <td colspan="3">
+      <h4>Books</h4>
+    </td>
+  </tr>
+  <tr>
+    <td> <a href="https://en.wikipedia.org/wiki/On_Tyranny">On Tyranny</a></td>
+    <td> <a href="https://en.wikipedia.org/wiki/Timothy_Snyder">Timothy Snyder</a></td>
+    <td> 2017 </td>
   </tr>
 </table>
 </div>
