--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-11-18 Mon 17:01 -->
+<!-- 2024-11-18 Mon 18:03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -52,7 +52,7 @@ table {
   <div>
 
 
-<figure id="orgebfa973">
+<figure id="org6d10263">
 <img src="./img/raab_headshot.jpg" alt="raab_headshot.jpg">
 
 </figure>
@@ -141,28 +141,6 @@ to automated circuit design.
 </div>
 </div>
 
-<div id="outline-container-Research-Interests" class="outline-2">
-<h2 id="Research-Interests">Research Interests</h2>
-<div class="outline-text-2" id="text-org38d21ba">
-<ul class="org-ul">
-<li>I strongly suspect that the next generation of &ldquo;Artificial Intelligence&rdquo; will
-not be focused on single models, but on multi-agent systems understood in terms
-of interacting units of control.
-In particular, does there exist a multi-agent game (for instance, based on a variational principle) such that individual agents that play the game with their environment (composed mostly of other agents) form a system that plays the game with the external environment more capably than any agent?
-If you know of any active research programs with this flavor, I would love to
-hear from you (and you should feel welcome to email me).</li>
-<li>I occasionally become absorbed by attempts to prove that <a href="https://en.wikipedia.org/wiki/P_versus_NP_problem"><!--P \subsetneq NP-->
-<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>P</mi><mo>⊊</mo><mi>N</mi><mi>P</mi></mrow><annotation encoding="application/x-tex">P \subsetneq NP</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8193em;vertical-align:-0.136em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">P</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel amsrm">⊊</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">NP</span></span></span></span></a>
-implies or is implied by the <a href="https://en.wikipedia.org/wiki/Fluctuation_theorem">fluctuation theorem</a>. So far, it&rsquo;s been a reliably
-humbling experience.</li>
-<li>I&rsquo;d like to better understand <a href="https://en.wikipedia.org/wiki/Quantum_decoherence">quantum decoherence</a>.  I never really outgrew a
-sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_problem">Measurement Problem</a>.</li>
-<li>I would be keen to develop architectures for normalizing flows that allow exact or cheaply-approximated Fisher-Rao natural gradient descent. Such architectures would allow accelerated simulation of evolutionary dynamics as a consequence of my prior work relating natural gradient descent and evolutionary game theory {5}.</li>
-</ul>
-</div>
-</div>
-
-
 <div id="outline-container-Skills" class="outline-2">
 <h2 id="Skills">Skills</h2>
 <div class="outline-text-2" id="text-orgc0a94c6">
@@ -199,51 +177,24 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 </div>
 </div>
 
-<div id="outline-container-Education" class="outline-2">
-<h2 id="Education">Education</h2>
-<div class="outline-text-2" id="text-org27631b9">
 
-<div class="cv-block">
-<table>
-<tr>
-  <td><div class="cv-block-a">PhD in Computer Science and Engineering</div></td>
-  <td><div class="cv-block-b">Sept 2019 – Mar 2024</div></td>
-</tr>
-<tr>
-  <td><div class="cv-block-c">University of California, Santa Cruz</div></td>
-  <td><div class="cv-block-d">Santa Cruz, CA</div></td>
-</tr>
-</table>
-</div>
-
+<div id="outline-container-Research-Interests" class="outline-2">
+<h2 id="Research-Interests">Research Interests</h2>
+<div class="outline-text-2" id="text-org38d21ba">
 <ul class="org-ul">
-<li>ARCS Scholar</li>
-<li>Dean&rsquo;s Fellow</li>
-<li>Regents Fellow</li>
-<li>Advancement with Honors</li>
-<li>Dissertation Year Fellow</li>
-</ul>
-
-
-
-<div class="cv-block">
-<table>
-<tr>
-  <td><div class="cv-block-a">BSc in Physics, College of Creative Studies</div></td>
-  <td><div class="cv-block-b">Sept 2011 – June 2015</div></td>
-</tr>
-<tr>
-  <td><div class="cv-block-c">University of California, Santa Barbara</div></td>
-  <td><div class="cv-block-d">Santa Barbara, CA</div></td>
-</tr>
-</table>
-</div>
-
-<ul class="org-ul">
-<li>High Honors</li>
-<li>Distinction in the Major</li>
-<li>UC Education Abroad Program Scholarship</li>
-<li>UCSB Education Abroad Program Scholarship</li>
+<li>I strongly suspect that the next generation of &ldquo;Artificial Intelligence&rdquo; will
+not be focused on single models, but on multi-agent systems understood in terms
+of interacting units of control.
+In particular, does there exist a multi-agent game (for instance, based on a variational principle) such that individual agents that play the game with their environment (composed mostly of other agents) form a system that plays the game with the external environment more capably than any agent?
+If you know of any active research programs with this flavor, I would love to
+hear from you (and you should feel welcome to email me).</li>
+<li>I occasionally become absorbed by attempts to prove that <a href="https://en.wikipedia.org/wiki/P_versus_NP_problem"><!--P \subsetneq NP-->
+<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>P</mi><mo>⊊</mo><mi>N</mi><mi>P</mi></mrow><annotation encoding="application/x-tex">P \subsetneq NP</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8193em;vertical-align:-0.136em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">P</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel amsrm">⊊</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">NP</span></span></span></span></a>
+implies or is implied by the <a href="https://en.wikipedia.org/wiki/Fluctuation_theorem">fluctuation theorem</a>. So far, it&rsquo;s been a reliably
+humbling experience.</li>
+<li>I&rsquo;d like to better understand <a href="https://en.wikipedia.org/wiki/Quantum_decoherence">quantum decoherence</a>.  I never really outgrew a
+sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_problem">Measurement Problem</a>.</li>
+<li>I would be keen to develop architectures for normalizing flows that allow exact or cheaply-approximated Fisher-Rao natural gradient descent. Such architectures would allow accelerated simulation of evolutionary dynamics as a consequence of my prior work relating natural gradient descent and evolutionary game theory {5}.</li>
 </ul>
 </div>
 </div>
@@ -340,10 +291,29 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 </div>
 </div>
 
-
 <div id="outline-container-Work-amp-Research-Experience" class="outline-2">
 <h2 id="Work-amp-Research-Experience">Work &amp; Research Experience</h2>
 <div class="outline-text-2" id="text-orga46faba">
+
+<div class="cv-block">
+<table>
+<tr>
+  <td><div class="cv-block-a">Postdoctoral Research Associate</div></td>
+  <td><div class="cv-block-b">Oct 2024 – Present</div></td>
+</tr>
+<tr>
+  <td><div class="cv-block-c">Pacific Northwest National Laboratory</div></td>
+  <td><div class="cv-block-d">Remote</div></td>
+</tr>
+</table>
+</div>
+
+<p>
+I am currently a postdoctoral research associate at Pacific Northwest National
+Laboratory, where I conduct research in optimization, multiagent systems, and
+so-called &ldquo;agentic&rdquo; Language Model (LM) programs.
+</p>
+
 
 <div class="cv-block">
 <table>
@@ -468,6 +438,54 @@ With a paid undergraduate research internship awarded by the UC Santa Barbara Ce
 </div>
 </div>
 
+<div id="outline-container-Education" class="outline-2">
+<h2 id="Education">Education</h2>
+<div class="outline-text-2" id="text-org27631b9">
+
+<div class="cv-block">
+<table>
+<tr>
+  <td><div class="cv-block-a">PhD in Computer Science and Engineering</div></td>
+  <td><div class="cv-block-b">Sept 2019 – Mar 2024</div></td>
+</tr>
+<tr>
+  <td><div class="cv-block-c">University of California, Santa Cruz</div></td>
+  <td><div class="cv-block-d">Santa Cruz, CA</div></td>
+</tr>
+</table>
+</div>
+
+<ul class="org-ul">
+<li>ARCS Scholar</li>
+<li>Dean&rsquo;s Fellow</li>
+<li>Regents Fellow</li>
+<li>Advancement with Honors</li>
+<li>Dissertation Year Fellow</li>
+</ul>
+
+
+
+<div class="cv-block">
+<table>
+<tr>
+  <td><div class="cv-block-a">BSc in Physics, College of Creative Studies</div></td>
+  <td><div class="cv-block-b">Sept 2011 – June 2015</div></td>
+</tr>
+<tr>
+  <td><div class="cv-block-c">University of California, Santa Barbara</div></td>
+  <td><div class="cv-block-d">Santa Barbara, CA</div></td>
+</tr>
+</table>
+</div>
+
+<ul class="org-ul">
+<li>High Honors</li>
+<li>Distinction in the Major</li>
+<li>UC Education Abroad Program Scholarship</li>
+<li>UCSB Education Abroad Program Scholarship</li>
+</ul>
+</div>
+</div>
 
 <div id="outline-container-Publications" class="outline-2">
 <h2 id="Publications">Publications</h2>
