--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-11-18 Mon 16:58 -->
+<!-- 2024-12-22 Sun 15:28 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -45,7 +45,7 @@
 </div>
 <div id="outline-container-Math" class="outline-3">
 <h3 id="Math">Math</h3>
-<div class="outline-text-3" id="text-org1fb46b1">
+<div class="outline-text-3" id="text-orgdf12874">
 <p>
 <a href="./julia.html">Julia Sets</a> <br>
 <a href="./euler-lagrange.html">Calculus of Variations</a> <br>
@@ -76,7 +76,7 @@
 <p>
 <a href="./chess.html">Chess</a> <br>
 <a href="./dark-chess.html">Dark Chess</a> <br>
-<a href="./fischer-random.html">Fischer Random Chess</a>
+<a href="./fischer-random.html">Fischer Random Chess</a> <br>
 </p>
 </div>
 </div>
@@ -88,6 +88,15 @@
 <a href="./tex.html">Live Tex to SVG, PNG</a> <br>
 <a href="./greyline.html">Greyline Map &amp; Interactive Astronomical Clock</a> <br>
 <a href="./satellites.html">Hourly Satellite Data</a>
+</p>
+</div>
+</div>
+
+<div id="outline-container-Math" class="outline-3">
+<h3 id="Math">Math</h3>
+<div class="outline-text-3" id="text-orgbf9b1eb">
+<p>
+<a href="./geometry.html">Geometry</a>
 </p>
 </div>
 </div>
