--- a/geometry.html
+++ b/geometry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-12-22 Sun 15:56 -->
+<!-- 2024-12-23 Mon 16:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Geometry</title>
@@ -35,12 +35,12 @@
 </svg>
 
 <div class="toolbar">
-  Tool:
   <button id="point-tool"><sup>1</sup>Point</button>
   <button id="line-tool"><sup>2</sup>Line</button>
   <button id="circle-tool"><sup>3</sup>Circle</button>
   <button id="pan-tool"><sup>4</sup>Pan</button>
-  <!-- <button id="undo-button">Undo</button> -->
+  <button id="undo-button">Undo</button>
+  <button id="redo-button">Redo</button>
 </div>
 
 <script type="text/javascript">
